--- a/Astronomy-Hybrid/Astronomy-Hybrid/Base.lproj/Main.storyboard
+++ b/Astronomy-Hybrid/Astronomy-Hybrid/Base.lproj/Main.storyboard
@@ -16,21 +16,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="b33-hf-743">
-                            <size key="itemSize" width="50" height="50"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="b33-hf-743">
+                            <size key="itemSize" width="150" height="150"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="LVw-Dv-PHG" customClass="SolPhotoCollectionViewCell" customModule="Astronomy_Hybrid" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="v8f-Aw-fqq">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HaO-87-EMA">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="HaO-87-EMA" secondAttribute="bottom" id="Bnu-KQ-5Fz"/>
+                                        <constraint firstItem="HaO-87-EMA" firstAttribute="leading" secondItem="v8f-Aw-fqq" secondAttribute="leading" id="aRI-TG-80U"/>
+                                        <constraint firstAttribute="trailing" secondItem="HaO-87-EMA" secondAttribute="trailing" id="bpn-aF-Vnz"/>
+                                        <constraint firstItem="HaO-87-EMA" firstAttribute="top" secondItem="v8f-Aw-fqq" secondAttribute="top" id="gqM-ot-XHI"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
                                 <connections>
+                                    <outlet property="imageView" destination="HaO-87-EMA" id="gvv-Ag-f2K"/>
                                     <segue destination="Qnh-cw-hX1" kind="show" id="p2N-xe-Y2H"/>
                                 </connections>
                             </collectionViewCell>
