--- a/Astronomy(Obj-C)/Storyboards/Base.lproj/Main.storyboard
+++ b/Astronomy(Obj-C)/Storyboards/Base.lproj/Main.storyboard
@@ -29,8 +29,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="timer" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ybQ-bP-Wu7">
-                                            <rect key="frame" x="0.0" y="0.5" width="150" height="149"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GraySquare" translatesAutoresizingMaskIntoConstraints="NO" id="ybQ-bP-Wu7">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             <color key="tintColor" systemColor="placeholderTextColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                         </imageView>
                                     </subviews>
@@ -136,6 +136,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="timer" catalog="system" width="64" height="60"/>
+        <image name="GraySquare" width="200" height="200"/>
     </resources>
 </document>
