--- a/Astronomy-ObSwiftive-c/Astronomy-ObSwiftive-c/Base.lproj/Main.storyboard
+++ b/Astronomy-ObSwiftive-c/Astronomy-ObSwiftive-c/Base.lproj/Main.storyboard
@@ -4,9 +4,65 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="Tm6-E1-ydK">
+            <objects>
+                <viewController id="9ZK-Pl-pR4" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3x6-39-sWy">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="h5t-fP-6YL">
+                                <rect key="frame" x="20" y="88" width="374" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="G9B-AC-0Ub">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="o0r-BB-Zif">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="PUJ-s4-f4I">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lxg-QN-Akr">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Lxg-QN-Akr" firstAttribute="top" secondItem="PUJ-s4-f4I" secondAttribute="top" id="Hl6-dz-OyF"/>
+                                                <constraint firstItem="Lxg-QN-Akr" firstAttribute="leading" secondItem="PUJ-s4-f4I" secondAttribute="leading" id="bTr-h2-VW7"/>
+                                                <constraint firstAttribute="bottom" secondItem="Lxg-QN-Akr" secondAttribute="bottom" id="jeC-Lp-OCg"/>
+                                                <constraint firstAttribute="trailing" secondItem="Lxg-QN-Akr" secondAttribute="trailing" id="wFi-Vg-Cfb"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="h5t-fP-6YL" firstAttribute="leading" secondItem="3x6-39-sWy" secondAttribute="leadingMargin" id="6ep-da-dkb"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="h5t-fP-6YL" secondAttribute="trailing" id="O0W-r8-9Yb"/>
+                            <constraint firstItem="h5t-fP-6YL" firstAttribute="top" secondItem="3x6-39-sWy" secondAttribute="topMargin" id="aNm-y1-vq4"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="h5t-fP-6YL" secondAttribute="bottom" id="dWb-Ck-CTf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ji5-gq-QXH"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="mEl-IK-ocZ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DsA-5o-NVp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="88.405797101449281" y="111.83035714285714"/>
+        </scene>
         <!--Rover Photo Detail View Controller-->
         <scene sceneID="eJS-lI-aZY">
             <objects>
@@ -98,22 +154,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="62O-a5-7Ny" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-72" y="115"/>
+            <point key="canvasLocation" x="837.68115942028987" y="114.50892857142857"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="XEV-LI-VT9">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Astronomy_ObSwiftive_c" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Otw-nj-f90" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="70J-mb-pNc">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9ZK-Pl-pR4" kind="relationship" relationship="rootViewController" id="AtB-PT-Uof"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yQF-hf-fbF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="759" y="115"/>
+            <point key="canvasLocation" x="-821.73913043478262" y="111.83035714285714"/>
         </scene>
     </scenes>
 </document>
